# energy-based-learning

./: .gitignore  CL-example.py  CL-simple.py  MANIFEST.in  downsample_mnist.py  drn-EP-vs-CL.py  drn-vs-relu-nn-copy.py  notes.txt  pyproject.toml  requirements.txt  square-lattice.py
energy_based_learning/: __init__.py  datasets.py
energy_based_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
energy_based_learning/model/: __init__.py
energy_based_learning/model/forward/: __init__.py  interaction.py  layer.py  minimizer.py  network.py
energy_based_learning/model/function/: __init__.py  cost.py  network_cl.py
energy_based_learning/model/hopfield/: __init__.py  interaction.py  layer.py  minimizer.py  network.py
energy_based_learning/model/minimizer/: __init__.py
energy_based_learning/model/resistive/: __init__.py  interaction.py  layer.py  minimizer.py  network.py
energy_based_learning/model/variable/: __init__.py  layer.py  parameter.py
energy_based_learning/training/: __init__.py  epoch.py  epoch_cl.py  monitor.py  sgd.py  sgd_cl.py
papers/ebl-algorithms/: comparative-study.py  sota-dchn.py  speedup.py
papers/fast-drn/: dhn.py  drn.py
