[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-based-learning"
version = "0.1.0"
description = "Energy-based learning algorithms for analog computing"
readme = "README.md"
authors = [{name = "RAIN Neuromorphics", email = "benjamin@rain.ai"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tensorboard>=2.5.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/rain-neuromorphics/energy-based-learning"
Repository = "https://github.com/rain-neuromorphics/energy-based-learning"
"Bug Tracker" = "https://github.com/rain-neuromorphics/energy-based-learning/issues"

[tool.setuptools]
packages = [
    "energy_based_learning",
    "energy_based_learning.model",
    "energy_based_learning.model.variable",
    "energy_based_learning.model.function",
    "energy_based_learning.model.hopfield",
    "energy_based_learning.model.minimizer",
    "energy_based_learning.model.resistive",
    "energy_based_learning.model.forward",
    "energy_based_learning.training"
]
